--- a/OPM0PG_MAUI/OPM0PG_MAUI.csproj
+++ b/OPM0PG_MAUI/OPM0PG_MAUI.csproj
@@ -62,16 +62,15 @@
 	  <MauiXaml Update="CurrentExchangeRatesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Logout.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="RegistrationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="SavedExchangeRatesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="RouteFactories\" />
 	</ItemGroup>
 
 </Project>
